Исправление после ревью